<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">getlog</string>
    <string name="menu_settings">menusettings</string>
    <string name="title_activity_getlog_setting">getlogSetting</string>
    <string name="APLog">APLog</string>
    <string name="APLog_Summary">Switch On to Get APLog</string>
    <string name="ModemLog">ModemLog</string>
    <string name="ModemLog_Summary">Switch On to Get ModemLog</string>
    <string name="ap_enabled_msg">"Get AP Log will be enabled.
If want get dump Log,please insert SD card and ensure free space at least 1GB to store crash dump Log."</string>
    <string name="ap_disabled_msg">AP Log will be disabled.</string>
    <string name="clear_ap_log">Clear AP Log</string>
    <string name="clear_ap_log_summary">Press to clear all AP Log</string>
    <string name="clear_aplog_msg">Really want to clear all AP Log</string>
    <string name="ask_turnoff_aplog_msg">Switch Off AP Log First</string>
    <string name="clear_modem_log">Clear Modem Log</string>
    <string name="clear_modem_log_summary">Press to clear all Modem Log</string>
    <string name="clear_modem_msg">Really want to clear all Modem Log</string>
    <string name="ask_turnoff_modem_msg">Switch Off Modem Log First</string>
    <string name="clear_success">Clear Success</string>
    <string name="clear_fail">Clear Fail</string>
    <string name="tcpdumplog">Tcpdump Log</string>
    <string name="tcpdumplog_Summary">Switch On to Get Tcpdump Log</string>
    <string name="mv_aplog_to_extsdcard">Move AP Log</string>
    <string name="mv_aplog_to_extsdcard_summary">Press Move AP Log to External SDCard</string>
    <string name="mv_modemlog_to_extsdcard">Move Modem Log</string>
    <string name="mv_modemlog_to_extsdcard_summary">Press Move Modem Log to logs file</string>
    <string name="press_to_config_modem_log_mask">Config Modem Log Mask</string>
    <string name="move_success">Move Success</string>
    <string name="move_fail">Move Fail</string>
    <string name="config_modem_log_mask_summary">config_modem_log_mask_summary</string>
    <string name="config_mask">Config Mask</string>
    <string name="mv_files_title">Moving Files</string>
    <string name="delete_files_title">Deleting Files</string>
    <string name="aplog_not_exist_msg">AP Log Not Exist,Will Do Nothing</string>
    <string name="qxdm_log_not_exist_msg">Modem Log Not Exist,Will Do Nothing</string>
    <string name="tcpdump_bin_not_exist_msg">Tcpdump APP Not Exist,Can Not Set Tcpdump Log</string>
    <string name="ext_sdcard_not_exist_msg">External SDCard Not Mount,Can Not Move Files</string>
    <string name="mv_file_aplog_on_msg">Please Switch Off AP Log Before Moving Files</string>
    <string name="operate_ap_log">Operate AP Log</string>
    <string name="operate_modem_log">Operate Modem Log</string>
    <string name="extsdcard_free_space_not_enough_msg">External SDCard Free Space Not Enough,Can Not Move Files</string>
    <string name="mv_file_qxdm_log_on_msg">Please Switch Off Modem Log Before Moving Files</string>
    <string name="config_mask_qxdm_log_on_msg">Please Switch Off Modem Log Before Configing Mask</string>
    <string name="config_mask_qxdm_custom">Please Put Custom diag.cfg To Internal SDCrad Root Directory</string>
    <string name="Others">Others</string>
    <string name="about_app">About APP</string>
    <string name="current_version">Current Version</string>
    <string name="can_not_find_version_name">Can Not Find Version Name</string>
    <string name="store_location">Save Log Location</string>
    <string name="press_to_select_store_location">Press To Select Save Log Location</string>
    <string name="select_internal_external_sdcard">Select Internal SDCard Or External SDCard</string>
    <string name="log_to_ext_sdcard_warning_msg">This Config Will Be Invalid After Reboot</string>
    <string name="log_location_with_log_on">Please Turn Off Tcpdump APLog And Modem Log Before This Operation</string>
    <string name="log_to_internal_sdcard_warning_msg">This Config Will Be Invalid After Reboot</string>
    <string name="bugreport">Bug report state</string>
    <string name="bugreport_state">switch on/off Bug report (should reboot)</string>
</resources>